# yamux

./: .gitignore  .prettierrc  README.md  build.js  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
.github/workflows/: release.yml
public/: dark.css  index.html  light.css
public/styles/: dark.css  light.css
src/: App.svelte  config.ts  helpers.ts  index.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs
src-tauri/src/patch_window/: macos.rs  mod.rs
src/HOC/: AddToPlaylistModal.svelte  AlbumSide.svelte  ArtistSide.svelte  AuthModal.svelte  HomePage.svelte  LikedPage.svelte  LyricsSide.svelte  Main.svelte  Modal.svelte  MyWave.svelte  Player.svelte  Playlist.svelte  PlaylistSide.svelte  QueueSide.svelte  RadioPage.svelte  SeachPage.svelte  SettingsPage.svelte  Sidebar.svelte  TrackList.svelte
src/components/: AlbumCard.svelte  AlbumList.svelte  AnimatedView.svelte  ArtistCard.svelte  ArtistList.svelte  Avatar.svelte  Button.svelte  Calendar.svelte  Card.svelte  ColorPicker.svelte  ContextMenu.svelte  Cover.svelte  DraggableWindow.svelte  EntityCard.svelte  EventCard.svelte  EventsTimeList.svelte  FilePreview.svelte  Icon.svelte  Input.svelte  LikeBtn.svelte  Link.svelte  Loader.svelte  MiniPlayer.svelte  PhotoPicker.svelte  PlaylistButton.svelte  Popup.svelte  Resizable.svelte  Slider.svelte  StationItem.svelte  TabBar.svelte  Table.svelte  Tabs.svelte  TrackCard.svelte
src/models/: album.ts  feed.ts  landing.ts  playlist.ts  station.ts  types.ts  yandex.ts
src/services/: api.service.ts  storage.service.ts
src/store/: EventEmitter.ts  auth.ts  home.ts  modal.ts  player.ts  playlist.ts  settings.ts  stations.ts
