[package]
name = "yamux"
version = "0.1.6"
description = "Yandex music desktop client"
authors = ["freethinkel"]
license = ""
repository = ""
default-run = "yamux"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.14", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.16", features = ["api-all", "macos-private-api"] }
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy", version = "0.1.0" }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
objc = "0.2"
rubrail = {version = "0.9.1"}

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
