[package]
name = "yamux"
version = "0.1.8"
description = "Yandex music desktop client"
authors = ["freethinkel"]
license = ""
repository = ""
default-run = "yamux"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = {  git = "https://github.com/tauri-apps/tauri", features = ["api-all", "macos-private-api"] }
url = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.3.2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
objc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
